# Echess

./: .gitignore  CMakeLists.txt  README.md  compile_shader.sh  conanfile.txt  run.sh
includes/: libraries.hpp
includes/scene/: camera.hpp  echess.hpp  pawn.hpp
includes/vk_wrapper/: application.hpp  buffer-manip.hpp  command-buffers.hpp  command-pool.hpp  depth-image.hpp  descriptor-sets.hpp  devices.hpp  framebuffers.hpp  graphics-pipeline.hpp  i-application.hpp  instance.hpp  mesh.hpp  model.hpp  surface.hpp  swap-chain.hpp  sync-objects.hpp  texture.hpp  uniform-buffers.hpp  utils.hpp  vertex.hpp  window.hpp
resources/: pawn.mtl
sources/: main.cpp
sources/scene/: camera.cpp  echess.cpp  pawn.cpp
sources/vk_wrapper/: application.cpp  buffer-manip.cpp  command-buffers.cpp  command-pool.cpp  depth-image.cpp  descriptor-sets.cpp  devices.cpp  framebuffers.cpp  graphics-pipeline.cpp  instance.cpp  mesh.cpp  model.cpp  surface.cpp  swap-chain.cpp  sync-objects.cpp  texture.cpp  uniform-buffers.cpp  utils.cpp  window.cpp
